# smart_house

./: .gitignore  Dockerfile  README.md  can_be_used  data_cold.csv  data_hot.csv  docker-compose.yaml  eigenfaces.py  faceid.py  log.txt  model_learn.py  psutil_stat.py  requirements.txt  ruff.toml  start_manager_server.py  stats_psutil.ipynb  test.bash  test.py  test2.py  test3.py
backend/: requirements.txt  start_manager_server.py
backup/: data.csv  stats_psutil.ipynb
budget_back/: Dockerfile
budget_back/budget/: Cargo.toml
conf/: manager.json  test.json
data/: init.sql  migration.sql
db/: Dockerfile  data.sql  setup.sh
face_recognition/: .gitignore  Dockerfile  kafka_functions.py  main.py  requirements.txt
light/: .gitignore  Dockerfile  diod.py  kafka_functions.py  matrix.py  requirements.txt  start_server.py
monitoring/: .dockerignore  Dockerfile  kafka_functions.py  requirements.txt  start_server.py  svr_temperature_model.joblib  svr_temperature_model.pkl  testing.py
motion/: Dockerfile  app.py  consumer.py  kafka_functions.py  producer.py  requirements.txt  start_server.py  video.py
my-react-app/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
output/: model.joblib  model_pca.joblib
pyimagesearch/: faces.py
raspberry_server/: .gitignore  Dockerfile  requirements.txt  start_server.py  test_server.py
rr_server/: .env  Cargo.toml  Dockerfile
rr_server/src/: lib.rs  main.rs
rr_server/src/devices/: device.rs  dht.rs  mod.rs
server/: .dockerignore
servers/: manager_server.py
system_monitor/: Cargo.toml
(+170 files in other folders)
