[package]
name = "rr_server"
version = "0.1.0"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "device_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
rayon = "1.10.0"
rdkafka = "0.37.0"
reqwest = { version = "0.12.15", features = ["json"] }
rustfmt = "0.10.0"
tokio = { version = "1.44.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
dotenv = "0.15.0"
rppal = "0.14.0"
